# qarnot-mcp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.prod.yml  main.py  openapi.json  pyproject.toml  todo.md
scripts/: test_initialize.sh
src/qarnot_mcp/: __init__.py  client.py  config.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_client.py  test_server.py
